fixed message too long
disable scrolling when loading

--- a/src/laravel/public/css/style.css
+++ b/src/laravel/public/css/style.css
@@ -350,7 +350,7 @@ h2 small span {padding: 5px; border: 1px solid #ffffff;}
 }
 
 .feedback-container{
-	height: 50px;
+	/*height: 50px;*/
 	background-color: transparent;
 	margin-top: -20px;
 	margin-bottom: 0px;
